# marginfi-v2

./: Cargo.toml
clients/rust/marginfi-cli/src/: entrypoint.rs  processor.rs
observability/indexer/: Cargo.toml  build.rs
observability/indexer/src/: entrypoint.rs
observability/indexer/src/commands/: index_accounts.rs
observability/indexer/src/utils/: geyser_client.rs
programs/marginfi/: Cargo.toml
programs/marginfi/src/: errors.rs  lib.rs
programs/marginfi/src/instructions/: marginfi_account.rs  marginfi_group.rs
programs/marginfi/src/instructions/marginfi_account/: borrow.rs
programs/marginfi/src/state/: marginfi_account.rs  marginfi_group.rs
programs/marginfi/src/utils/: access_control.rs
programs/marginfi/tests/: marginfi_account.rs
programs/marginfi/tests/fixtures/: marginfi_group.rs  test.rs
